updated signup, added category crud operations, added cart crud operations